<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="fill_parent"
              android:layout_alignParentBottom="false"
              android:layout_alignParentLeft="false"
              android:layout_alignParentRight="false"
              android:layout_alignParentStart="true"
              android:layout_alignParentTop="false"
              android:layout_alignWithParentIfMissing="false"
              android:layout_centerInParent="true"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.rtve.ui.LandingScreenActivity"
   >

   <TextView
      android:id="@+id/landingScreenTitle"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:enabled="true"
      android:gravity="fill_vertical|center_horizontal"
      android:inputType="none"
      android:singleLine="false"
      android:text="@string/landing_title"
      android:textAppearance="?android:attr/textAppearanceLarge"
      android:textSize="40sp"
      android:textStyle="bold|italic"
      android:typeface="normal"
      android:layout_weight=".50"/>

   <ImageView
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/appIconImageView"
      android:layout_gravity="center"
      android:src="@drawable/slide_cameras"
      android:scaleType="fitCenter"
      android:contentDescription="@string/landing_image_description"
      android:adjustViewBounds="true"
      android:layout_weight="0"/>

   <Button
      android:id="@+id/loadConfigButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/landing_load_config"
      android:textSize="20sp"
      android:onClick="loadConfig"
      android:layout_weight=".25"/>

   <Button
      android:id="@+id/newConfigButton"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_gravity="center"
      android:text="@string/landing_new_config"
      android:textSize="20sp"
      android:onClick="newConfig"
      android:layout_weight=".25"/>
</LinearLayout>
